--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ tokio = { version = "1.27.0", features = ["full"] }
 log = "0.4.17"
 env_logger = "0.10.0"
 anyhow = "1.0"
+clap = { version = "4.2.2", features = ["derive"] }
