--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,6 @@
-[package]
-name = "game"
-version = "0.1.0"
-edition = "2021"
+[workspace]
 
-[dependencies]
-tokio = { version = "1.27.0", features = ["full"] }
-log = "0.4.17"
-env_logger = "0.10.0"
-anyhow = "1.0"
-clap = { version = "4.2.2", features = ["derive"] }
-rand = "0.8.5"
+members = [
+    "server",
+    "web"
+]
