--- a/web/Cargo.toml
+++ b/web/Cargo.toml
@@ -18,6 +18,8 @@ wasm-bindgen = "0.2"
 web-sys = { version = "0.3.61", features = ["WebSocket"] }
 futures = "0.3.28"
 gloo-timers = { version = "0.2.6", features = ["futures"] }
+js-sys = "0.3.61"
+
 
 [build]
 target = "wasm-unknown-unknown"
