--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -10,4 +10,5 @@ anyhow = "1.0"
 clap = { version = "4.2.2", features = ["derive"] }
 tokio = { version = "1.27.0", features = ["full"] }
 rand = "0.8.5"
-
+tokio-tungstenite = "0.18.0"
+futures-util = "0.3.28"
