--- a/web/Cargo.toml
+++ b/web/Cargo.toml
@@ -15,7 +15,7 @@ console_error_panic_hook = "0.1.6"
 tracing-wasm = "0.2"
 wasm-bindgen-futures = "0.4"
 wasm-bindgen = "0.2"
-web-sys = { version = "0.3.61", features = ["WebSocket"] }
+web-sys = { version = "0.3.61", features = ["WebSocket", "CloseEvent"] }
 futures = "0.3.28"
 gloo-timers = { version = "0.2.6", features = ["futures"] }
 js-sys = "0.3.61"
