--- a/web/Cargo.toml
+++ b/web/Cargo.toml
@@ -19,6 +19,8 @@ web-sys = { version = "0.3.61", features = ["WebSocket", "CloseEvent"] }
 futures = "0.3.28"
 gloo-timers = { version = "0.2.6", features = ["futures"] }
 js-sys = "0.3.61"
+game-common = { path = "../common" }
+getrandom = { version = "0.2.9", features = ["js"] }
 
 
 [build]
