--- a/web/Cargo.toml
+++ b/web/Cargo.toml
@@ -11,6 +11,7 @@ eframe = { version = "0.21.0", default-features = false, features = [
     "default_fonts", # Embed the default egui fonts.
     "glow",          # Use the glow rendering backend. Alternative: "wgpu".
 ] }
+egui_extras = "0.21.0"
 console_error_panic_hook = "0.1.6"
 tracing-wasm = "0.2"
 wasm-bindgen-futures = "0.4"
