--- a/web/Cargo.toml
+++ b/web/Cargo.toml
@@ -12,6 +12,8 @@ eframe = { version = "0.21.0", default-features = false, features = [
     "glow",          # Use the glow rendering backend. Alternative: "wgpu".
 ] }
 egui_extras = "0.21.0"
+ehttp = "0.2.0"
+poll-promise = "0.2.0"
 console_error_panic_hook = "0.1.6"
 tracing-wasm = "0.2"
 wasm-bindgen-futures = "0.4"
